src/language/tests/success/static.prez
class Base {
  public static String test() {
    return "Base";
  }
}

class Derived : Base {
  public static String test() {
    return Derived.test(false);
  }

  public static String test(bool useBase) {
    return useBase ? Base.test() : "Derived";
  }
}


void main() {
  print(Base.test());
  print(Derived.test(true));
  print(Derived.test());
}
