src/language/tests/error/class.prez
class Vehicle {
  public int seats;

  public Vehicle() {
    this.seats = true;
  }

  public bool hasSeats() {
    return this.seats;
  }

  public void setSeats(long seats) {
    this.seats = seats;
  }
}


void main() {
  Vehicle car = Vehicle(5);
  int b = car.hasSeats();
  print(b);
  car.setSeats(true);
  car.wrongField = 5;
}
